--- a/requirements.txt
+++ b/requirements.txt
@@ -67,11 +67,11 @@ streamlit==1.39.0
 streamlit-option-menu==0.4.0
 sympy==1.13.1
 tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow_intel==2.18.0
+tensorboard
+tensorboard-data-server
+tensorflow
+tensorflow-io-gcs-filesystem
+tensorflow_intel
 termcolor==2.5.0
 toml==0.10.2
 torch==2.5.1
