--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ mpmath==1.3.0
 namex==0.0.8
 narwhals==1.12.1
 numpy==2.0.2
-opencv-python==4.10.0.84
+opencv-python-headless
 opt_einsum==3.4.0
 optree==0.13.0
 packaging==24.1
