--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ contourpy==1.3.0
 cycler==0.12.1
 filelock==3.16.1
 flatbuffers==24.3.25
+opencv-python==4.5.5.64
 opencv-python-headless
 fonttools==4.54.1
 fsspec==2024.10.0
